# AlKAsH3D-Engine

./: 1  1.py  1.txt  LICENSE  README.md  requirements.txt  setup.py  test_math.py  test_scene.py
alkash3d/: __init__.py  engine.py  window.py
alkash3d.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
alkash3d/alkash3d_dx12/: Cargo.toml
alkash3d/alkash3d_dx12/src/: lib.rs
alkash3d/assets/: __init__.py  material.py  texture_manager.py
alkash3d/core/: __init__.py  input.py  timer.py
alkash3d/culling/: __init__.py  bvh.py  octree.py
alkash3d/graphics/: __init__.py  backend.py  dx12_backend.py  gl_backend.py
alkash3d/math/: __init__.py  mat4.py  quat.py  vec3.py  vec4.py
alkash3d/mesh/: __init__.py  mesh.py
alkash3d/multithread/: task_pool.py
alkash3d/native/: __init__.py  rt_core.py
alkash3d/plugins/: __init__.py  example_plugin.py  plugin_manager.py
alkash3d/postproc/: __init__.py  bloom.py  color_grading.py  (+4 more)
alkash3d_rtx/: __init__.py  _kernel.py
editor_app/: __init__.py  gl_widget.py  main.py  scene_io.py  ui.py
examples/: basic_example.py  config.json  example_game.py  game_template.py  minimal_example.py  rtx_demo.py  simple_game.py  test_rtx.py
examples 2/: Space-shooter Demo.py  collect_game.py  config.json  main.py  mys.py  racing_demo.py  shadow_game_alt.py
tester_func/: test_backend.py  test_buffer_texture.py  test_d3dcompiler.py  test_descriptor_heap.py  test_minimal.py  test_shader_compilation.py  window_test.py
testers/: 1.py  2.py  3.py  4.py  5.py  6.py  7.py  conftest.py  engine_full.py  test.py  test_all.py
(+49 files in other folders)
